--- a/org.widelands.Widelands.yaml
+++ b/org.widelands.Widelands.yaml
@@ -51,18 +51,14 @@ modules:
         # This is needed to set the version string without
         # 'disable-shallow-clone: true'
         # (use utils/detect_revision.py in a complete git tree to get it)
-
-        ### PR branch for bugfix, only used for test build ###
-        WL_VERSION: 1.1~git25570[4348929@5177-signed-char]
+        WL_VERSION: 1.1~git25573[9cb2194@master]
         WL_RELEASE_DATE: 2021-12-31
       ldflags: -lGL
     sources:
       # Use this for development versions:
       - type: git
         url: https://github.com/widelands/widelands.git
-
-        ### PR branch for bugfix, only used for test build ###
-        commit: 4348929d1edab3e21640330cc1624ad7e1dd2997
+        commit: 9cb2194506e182782ff9c75be67582be8e479f15
 
       # Use this for RC:
       # - type: archive
