--- a/org.widelands.Widelands.yaml
+++ b/org.widelands.Widelands.yaml
@@ -99,6 +99,6 @@ modules:
       # https://www.widelands.org/forum/topic/1343/?page=3#post-9857
       - -DGLEW_LIBRARY:FILEPATH=/app/lib/libGLEW.a
       # cmake ignores CPLUS_INCLUDE_PATH where Asio is installed
-      - -DCMAKE_INCLUDE_PATH=${CPLUS_INCLUDE_PATH}
+      - -DCMAKE_INCLUDE_PATH=/app/include
       - -DOPENGL_glu_LIBRARY=/app/lib/libGLU.a
 
