--- a/org.widelands.Widelands.yaml
+++ b/org.widelands.Widelands.yaml
@@ -1,7 +1,8 @@
 app-id: org.widelands.Widelands
 default-branch: beta
 runtime: org.freedesktop.Platform
-runtime-version: '22.08beta'
+runtime-version: '21.08'
+#runtime-version: '22.08beta'
 sdk: org.freedesktop.Sdk
 command: widelands
 desktop-file-name-suffix: ' (Beta)'
