Update to git b301eaa
* revert runtime update again...

--- a/org.widelands.Widelands.yaml
+++ b/org.widelands.Widelands.yaml
@@ -1,7 +1,9 @@
 app-id: org.widelands.Widelands
 default-branch: beta
 runtime: org.freedesktop.Platform
-runtime-version: '22.08'
+runtime-version: '21.08'
+# segfaults on game start with 22.08
+# runtime-version: '22.08'
 sdk: org.freedesktop.Sdk
 command: widelands
 desktop-file-name-suffix: ' (Beta)'
@@ -52,14 +54,14 @@ modules:
         # This is needed to set the version string without
         # 'disable-shallow-clone: true'
         # (use utils/detect_revision.py in a complete git tree to get it)
-        WL_VERSION: 1.1~git25862 (cdb5ccf@master)
-        WL_RELEASE_DATE: 2022-09-01
+        WL_VERSION: 1.1~git25864 (b301eaa@master)
+        WL_RELEASE_DATE: 2022-09-03
       ldflags: -lGL
     sources:
       # Use this for development versions:
       - type: git
         url: https://github.com/widelands/widelands.git
-        commit: cdb5ccff161279a5d706ea402f2033b2331f5965
+        commit: b301eaaafd793d95966af1bdf3480fae8bbcffee
 
       # Use this for RC:
       # - type: archive
