--- a/org.widelands.Widelands.yaml
+++ b/org.widelands.Widelands.yaml
@@ -3,9 +3,9 @@ default-branch: beta
 runtime: org.freedesktop.Platform
 runtime-version: '22.08'
 sdk: org.freedesktop.Sdk
-# if clang is desired instead of GCC
-# sdk-extensions:
-#   - org.freedesktop.Sdk.Extension.llvm14
+# SDK 22.08 has GCC 12.1 wich was a beta release, so we use clang instead
+sdk-extensions:
+  - org.freedesktop.Sdk.Extension.llvm14
 command: widelands
 desktop-file-name-suffix: ' (Beta)'
 tags:
@@ -55,19 +55,19 @@ modules:
         # This is needed to set the version string without
         # 'disable-shallow-clone: true'
         # (use utils/detect_revision.py in a complete git tree to get it)
-        WL_VERSION: 1.1~git25867 (5f8cfab@sdl-image-262-fix)
-        WL_RELEASE_DATE: 2022-09-05
+        WL_VERSION: 1.1~git25877 (40450cc@master)
+        WL_RELEASE_DATE: 2022-09-22
 
         # Use clang instead of GCC
-        # CC:  /usr/lib/sdk/llvm14/bin/clang
-        # CXX: /usr/lib/sdk/llvm14/bin/clang++
+        CC:  /usr/lib/sdk/llvm14/bin/clang
+        CXX: /usr/lib/sdk/llvm14/bin/clang++
 
       ldflags: -lGL
     sources:
       # Use this for development versions:
       - type: git
         url: https://github.com/widelands/widelands.git
-        commit: 5f8cfab7514824fbe76a1570cf9d93ac61a695f5
+        commit: 40450cc8d7f01452bcadee370a1289fd5538d926
 
       # Use this for RC:
       # - type: archive
