--- a/org.widelands.Widelands.yaml
+++ b/org.widelands.Widelands.yaml
@@ -56,8 +56,8 @@ modules:
         # This is needed to set the version string without
         # 'disable-shallow-clone: true'
         # (use utils/detect_revision.py in a complete git tree to get it)
-        WL_VERSION: 1.1~git25877 (40450cc@master)
-        WL_RELEASE_DATE: 2022-09-22
+        WL_VERSION: 1.1~rc1
+        WL_RELEASE_DATE: 2022-10-16
 
         # Use clang instead of GCC
         #CC:  /usr/lib/sdk/llvm14/bin/clang
