--- a/org.widelands.Widelands.yaml
+++ b/org.widelands.Widelands.yaml
@@ -1,7 +1,7 @@
 app-id: org.widelands.Widelands
 default-branch: beta
 runtime: org.freedesktop.Platform
-runtime-version: '23.08beta'
+runtime-version: '23.08'
 sdk: org.freedesktop.Sdk
 # For compiling with clang:
 #sdk-extensions:
