--- a/org.widelands.Widelands.yaml
+++ b/org.widelands.Widelands.yaml
@@ -84,6 +84,7 @@ modules:
           if [ -n "$WL_RELEASE_DATE" ]
           then
             if [ -z "$WL_VERSION" ]
+            then
               echo "$SANITY_WARNING"
               exit 1
             fi
@@ -106,6 +107,7 @@ modules:
 
           else
             if [ -n "$WL_VERSION" ]
+            then
               echo "$SANITY_WARNING"
               exit 1
             fi
